[package]
name = "esp-idf-ble"
version = "0.0.1"
edition = "2021"
authors = ["Pierre-Yves Aillet <pyaillet@gmail.com>"]
resolver = "2"

[profile.release]
opt-level = "s"
incremental = true

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
incremental = true

[features]
native = ["esp-idf-sys/native"]
default = ["native"]

[dependencies]
esp-idf-sys = { version = "0.32.1", features = ["binstart", "std", "native"] }
esp-idf-svc = "0.45.0"
esp-idf-hal = "0.40.1"
embedded-svc = "0.24.0"
embedded-hal = "0.2"

log = { version = "0.4" }
embassy-sync = { version = "0.1.0", features = ["std"] }

[build-dependencies]
embuild = "0.31.0"
anyhow = "1"

[package.metadata.espflash]
partition_table = "partitions.csv"
